--- a/kuji32.rc
+++ b/kuji32.rc
@@ -22,8 +22,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #include "resource.h"
 #include "windows.h"
 
-IDI_MAIN			ICON		"app.ico"
-IDI_SMALL			ICON		"small.ico"
+IDI_KUJI32			ICON		"app.ico"
+IDI_KUJI32_SMALL	ICON		"small.ico"
 
 
 IDD_DLGPROGRAM DIALOG 0, 0, 289, 90
@@ -32,7 +32,7 @@ STYLE DS_3DLOOK | DS_SHELLFONT | WS_BORDER | WS_VISIBLE | WS_CHILDWINDOW
 EXSTYLE WS_EX_ACCEPTFILES
 FONT 8, "Ms Shell Dlg"
 BEGIN
-    AUTORADIOBUTTON     "READ", IDC_RBREAD, 7, 12, 36, 8, WS_TABSTOP, WS_EX_LEFT
+    AUTORADIOBUTTON     "READ", IDC_RBREAD, 7, 12, 36, 8, WS_DISABLED | WS_TABSTOP, WS_EX_LEFT
     AUTORADIOBUTTON     "WRITE", IDC_RBWRITE, 7, 22, 35, 8, WS_TABSTOP, WS_EX_LEFT
     EDITTEXT			IDC_EDTFILE, 50, 20, 157, 14, ES_AUTOHSCROLL, WS_EX_LEFT
     PUSHBUTTON			"...", IDC_BTNSELSOURCE, 212, 20, 20, 14, 0, WS_EX_LEFT
@@ -40,12 +40,12 @@ BEGIN
     LTEXT				"S-Record File", IDC_LBLSOURCE, 52, 9, 100, 8, SS_LEFT, WS_EX_LEFT
 	COMBOBOX			IDC_CBXMCU, 50, 39, 100, 200, WS_VSCROLL | CBS_DROPDOWNLIST | WS_TABSTOP | WS_VISIBLE | CBS_HASSTRINGS, 0
 	COMBOBOX			IDC_CBXPORT, 160, 39, 50, 100, WS_VSCROLL | CBS_DROPDOWNLIST | WS_TABSTOP | WS_VISIBLE | CBS_HASSTRINGS, 0
-	LTEXT				"Idle", IDC_LBLSTATUS, 7, 55, 275, 30, WS_BORDER | SS_EDITCONTROL | SS_LEFT, WS_EX_LEFT
+	LTEXT				"Idle", IDC_LBLSTATUS, 7, 55, 275, 30, WS_BORDER | SS_LEFT, WS_EX_LEFT
 END
 
 1 VERSIONINFO
-FILEVERSION     0,8,0,0
-PRODUCTVERSION  0,8,0,0
+FILEVERSION     0,9,1,0
+PRODUCTVERSION  0,9,1,0
 BEGIN
 	BLOCK "StringFileInfo"
 	BEGIN
@@ -53,12 +53,12 @@ BEGIN
 		BEGIN
 			VALUE "CompanyName", "Kari Sigurjonsson"
 			VALUE "FileDescription", "Kuji32 Flash MCU Programmer"
-			VALUE "FileVersion", "0.8"
+			VALUE "FileVersion", "0.9"
 			VALUE "InternalName", "kuji32"
 			VALUE "LegalCopyright", "Copyright (C) 2014 Kari Sigurjonsson"
 			VALUE "OriginalFilename", "kuji32.exe"
 			VALUE "ProductName", "Kuji32"
-			VALUE "ProductVersion", "0.8"
+			VALUE "ProductVersion", "0.9"
 		END
 	END
 
